# swagger/swagger.json
@@ -1322,10 +1322,29 @@
                     },
                     {
                         "in": "query",
+                        "name": "mytodo",
+                        "description": "我的审核",
+                        "type": "boolean"
+                    },
+                    {
+                        "in": "query",
                         "name": "status",
                         "description": "状态",
                         "type": "integer",
                         "format": "int64"
+                    },
+                    {
+                        "in": "query",
+                        "name": "todostatus",
+                        "description": "0：代办；1：已办",
+                        "type": "integer",
+                        "format": "int64"
+                    },
+                    {
+                        "in": "query",
+                        "name": "name",
+                        "description": "搜索申请人",
+                        "type": "string"
                     },
                     {
                         "in": "query",
@@ -1358,6 +1377,45 @@
                     },
                     "500": {
                         "description": "server internal err"
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "expense"
+                ],
+                "description": "审批申请报销",
+                "operationId": "ExpenseController.审批申请报销",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "id",
+                        "description": "报销id",
+                        "required": true,
+                        "schema": {
+                            "format": "int64",
+                            "type": "integer"
+                        },
+                        "type": "integer",
+                        "format": "int64"
+                    },
+                    {
+                        "in": "body",
+                        "name": "comment",
+                        "description": "审批意见",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        },
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{string} \"success\""
+                    },
+                    "500": {
+                        "description": "server err"
                     }
                 }
             },
@@ -1439,48 +1497,7 @@
                 }
             }
         },
-        "/expense/expense": {
-            "put": {
-                "tags": [
-                    "expense"
-                ],
-                "description": "审批申请报销",
-                "operationId": "ExpenseController.审批申请报销",
-                "parameters": [
-                    {
-                        "in": "body",
-                        "name": "id",
-                        "description": "报销id",
-                        "required": true,
-                        "schema": {
-                            "format": "int64",
-                            "type": "integer"
-                        },
-                        "type": "integer",
-                        "format": "int64"
-                    },
-                    {
-                        "in": "body",
-                        "name": "comment",
-                        "description": "审批意见",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        },
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "{string} \"success\""
-                    },
-                    "500": {
-                        "description": "server err"
-                    }
-                }
-            }
-        },
-        "/expense/expense/paid": {
+        "/expense/paid": {
             "put": {
                 "tags": [
                     "expense"
@@ -1511,7 +1528,24 @@
                 }
             }
         },
-        "/expense/expense/{id}": {
+        "/expense/projects": {
+            "get": {
+                "tags": [
+                    "expense"
+                ],
+                "description": "项目code",
+                "operationId": "ExpenseController.engagement_list",
+                "responses": {
+                    "200": {
+                        "description": "{string} \"success\""
+                    },
+                    "500": {
+                        "description": "server err"
+                    }
+                }
+            }
+        },
+        "/expense/{id}": {
             "get": {
                 "tags": [
                     "expense"
@@ -1528,23 +1562,6 @@
                         "format": "int64"
                     }
                 ],
-                "responses": {
-                    "200": {
-                        "description": "{string} \"success\""
-                    },
-                    "500": {
-                        "description": "server err"
-                    }
-                }
-            }
-        },
-        "/expense/projects": {
-            "get": {
-                "tags": [
-                    "expense"
-                ],
-                "description": "项目code",
-                "operationId": "ExpenseController.engagement_list",
                 "responses": {
                     "200": {
                         "description": "{string} \"success\""
